# stratum-race

./: README.md
collector/: str_race.py
config/: gridpool-agent.example.json  gridpool-main.json  pools.schema.json
deploy/systemd/: stratum-race-agent.service  stratum-race-dashboard.service
docs/: gridpool-deployment.md
frontend/: package-lock.json  package.json
frontend/src/: main.ts
frontend/src/components/: RecentBlocksList.vue
frontend/src/types/: index.ts
frontend/src/utils/: blockTimeline.test.ts  blockTimeline.ts
frontend/src/views/: BlockDetailView.vue  PoolDetailView.vue
frontend/tests/: setup.ts
lib/: local_store.py  race_summary.py
scripts/: backfill-gridpool-chain-tip.py
standalone/: main.py  server.py
sv2-observer/: Cargo.toml
sv2-observer/src/: main.rs
tests/parity/: test_aggregate_parity.py
tests/shared/: test_collector_local.py  test_protocol_config.py
tests/standalone/: test_ingest.py
